--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,16 @@
         "stop_token": "cpp",
         "*.ipp": "cpp",
         "*.inc": "cpp",
-        "strstream": "cpp"
+        "strstream": "cpp",
+        "cholesky": "cpp",
+        "core": "cpp",
+        "eigenvalues": "cpp",
+        "geometry": "cpp",
+        "householder": "cpp",
+        "jacobi": "cpp",
+        "lu": "cpp",
+        "qr": "cpp",
+        "svd": "cpp"
     }
     
 }
